# random-time-quench

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-01-spin-model-quench-design.md  2026-02-01-syk-model-design.md  2026-02-01-syk-model-implementation-plan.md
notebooks/: fp_quench.ipynb
output/jupyter-notebook/: spin-model-quench-demo.ipynb
quench_protocols/: __init__.py  cli.py  distributions.py  frame_potential.py  protocols.py  random_matrices.py  spin_model.py  syk_model.py
tests/: test_cli_spin_model.py  test_cli_syk_model.py  test_frame_potential.py  test_protocols.py  test_spin_model.py  test_syk_model.py
