[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quench-protocols"
version = "0.1.0"
description = "Two-time and three-time quench protocols and frame potential estimates."
readme = "AGENTS.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
